- minor cleaning up of code in workflow module
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@2353 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f